# stargate-soundtouch

./: .gitignore  CMakeLists.txt  Makefile.am  README.html  SoundTouchConfig.cmake.in  bootstrap  configure.ac  createsrcpack  make-win.bat  readme.md
config/: am_include.mk
include/: BPMDetect.h  FIFOSampleBuffer.h  FIFOSamplePipe.h  STTypes.h  SoundTouch.h
source/: Makefile.am
source/Android-lib/: AndroidManifest.xml  README-SoundTouch-Android.html
source/Android-lib/jni/: Android.mk  Application.mk  soundtouch-jni.cpp
source/Android-lib/res/layout/: activity_example.xml
source/Android-lib/src/net/surina/: ExampleActivity.java
source/Android-lib/src/net/surina/soundtouch/: SoundTouch.java
source/SoundStretch/: Makefile.am  OS.h  RunParameters.cpp  RunParameters.h  WavFile.cpp  WavFile.h  main.cpp  soundstretch.dsw  soundstretch.vcproj  soundstretch.vcxproj
source/SoundTouch/: 3dnow_win.cpp  AAFilter.cpp  AAFilter.h  BPMDetect.cpp  FIFOSampleBuffer.cpp  FIRFilter.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.cpp  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  Makefile.am  PeakFinder.cpp  PeakFinder.h  RateTransposer.cpp  RateTransposer.h  SoundTouch.cpp  SoundTouch.dsw  SoundTouch.vcproj  SoundTouch.vcxproj  TDStretch.cpp  TDStretch.h  cpu_detect_x86.cpp  cpu_detect_x86_gcc.cpp  cpu_detect_x86_win.cpp  mmx_optimized.cpp  sse_optimized.cpp
source/SoundTouchDLL/: Makefile.am  SoundTouchDLL.cpp  SoundTouchDLL.h  SoundTouchDLL.pas  SoundTouchDLL.rc  SoundTouchDLL.vcproj  SoundTouchDLL.vcxproj  make-gnu-dll.sh  resource.h
source/SoundTouchDLL/DllTest/: DllTest.vcxproj
source/SoundTouchDLL/LazarusTest/: SoundTouchDLL.pas
source/csharp-example/: MainWindow.xaml  MainWindow.xaml.cs  SoundProcessor.cs  SoundTouch.cs
source/csharp-example/Properties/: AssemblyInfo.cs
source/example/: Makefile.am
source/example/SoundStretch/: Makefile.am  WavFile.cpp  WavFile.h  main.cpp  soundstretch.sln  soundstretch.vcproj
source/example/bpm/: BPMDetect.cpp  PeakFinder.cpp  PeakFinder.h
